Update nix version and fix build on some docker versions

--- a/builder/Dockerfile
+++ b/builder/Dockerfile
@@ -1,14 +1,14 @@
 FROM alpine
 
 ENV USER=root
-ARG nversion=1.11.6
-ARG nsha=c3992530762322aa3c23a5d2c6df20a43cb255bc7969c4cd016f6a4262ca843c
+ARG nversion=1.11.15
+ARG nsha=57bebb9718c3e12dfed6ae5ac0aa6960d8cc73efb01aecd0e6d2854c48c39444
 run sed -i -e 's/v3\.6/edge/g' /etc/apk/repositories
 run echo http://dl-cdn.alpinelinux.org/alpine/edge/testing >> /etc/apk/repositories
 RUN echo 'nixbld:x:998:nobody' >> /etc/group && \
     apk add -U bash perl libressl bzip2 sqlite curl xz perl-dbd-sqlite perl-dbi libsodium gcc g++ make \
         perl-dev libressl-dev bzip2-dev sqlite-dev curl-dev xz-dev libsodium-dev linux-headers libbz2 libstdc++ \
-        e2fsprogs e2fsprogs-extra perl-www-curl && \
+        e2fsprogs e2fsprogs-extra perl-www-curl libseccomp-dev && \
     rm -rf /var/cache/apk/* && \
     curl -OL https://nixos.org/releases/nix/nix-${nversion}/nix-${nversion}.tar.bz2 && \
     echo "${nsha}  nix-${nversion}.tar.bz2" | sha256sum -c && \
@@ -21,5 +21,6 @@ RUN echo 'nixbld:x:998:nobody' >> /etc/group && \
     cd - && \
     rm -rf nix-${nversion}* && \
     apk del gcc g++ make perl-dev libressl-dev libressl-dev bzip2-dev sqlite-dev curl-dev xz-dev libsodium-dev linux-headers
-RUN nix-channel --add https://nixos.org/channels/nixos-16.09 && \
+RUN ln -s /tmp /dev/crashcart
+RUN nix-channel --add https://nixos.org/channels/nixos-17.09 && \
     nix-channel --update
